--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,25 @@ services:
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1:53"
 
+  plug:
+    image: "nginx:1.23.0"
+    container_name: "plug"
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "4"
+    volumes:
+      - "./plug:/usr/share/nginx/html:ro"
+    networks:
+      - "traefik"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.plug.rule=Host(`${PLUG_HOST}`) && Method(`GET`)"
+      - "traefik.http.routers.plug.entryPoints=web"
+      - "traefik.http.routers.plug.tls=true"
+      - "traefik.http.routers.plug.tls.certresolver=cloudflare"
+      - "traefik.http.services.plug.loadbalancer.server.port=80"
+
   wg-easy:
     image: weejewel/wg-easy
     container_name: wg-easy
